use env vars for sauce

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ dist: trusty
 
 addons:
   chrome: stable
-  sauce_connect:
-    username: mobiledoc-kit
-    access_key: f9cad21d-1141-452d-8f64-c6ba3f43faa6
+  sauce_connect: true
+
+env:
+  - SAUCE_USERNAME="mobiledoc-kit"
+  - SAUCE_ACCESS_KEY="f9cad21d-1141-452d-8f64-c6ba3f43faa6"
 
 cache:
   yarn: true
