--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ addons:
   sauce_connect: true
 
 env:
-  - SAUCE_USERNAME="mobiledoc-kit"
-  - SAUCE_ACCESS_KEY="f9cad21d-1141-452d-8f64-c6ba3f43faa6"
+  - SAUCE_USERNAME="mobiledoc-kit" SAUCE_ACCESS_KEY="f9cad21d-1141-452d-8f64-c6ba3f43faa6"
 
 cache:
   yarn: true
